--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
-
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -121,6 +120,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Agence"
 }
